gen/JarvisLangParser.py
# Generated from JarvisLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JarvisLangParser ( Parser ):

    grammarFileName = "JarvisLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Jarvis'", "'crea'", "'fija'", "'con'", 
                     "'cambia'", "'a'", "'Dime'", "'Escucha'", "'Suma'", 
                     "'Resta'", "'Multiplica'", "'Divide'", "'Aumenta'", 
                     "'Disminuye'", "'si'", "'Si'", "'no'", "'repite'", 
                     "'veces'", "'Termina'", "'numero'", "'texto'", "'logico'", 
                     "'verdadero'", "'falso'", "'es'", "'igual'", "'diferente'", 
                     "'de'", "'mayor'", "'menor'", "'o'", "'que'", "'por'", 
                     "'entre'", "<INVALID>", "<INVALID>", "','", "':'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "JARVIS", "CREA", "FIJA", "CON", "CAMBIA", 
                      "A", "DIME", "ESCUCHA", "SUMA", "RESTA", "MULTIPLICA", 
                      "DIVIDE", "AUMENTA", "DISMINUYE", "SI", "SI_CAP", 
                      "NO", "REPITE", "VECES", "TERMINA", "NUMERO_TYPE", 
                      "TEXTO_TYPE", "LOGICO_TYPE", "VERDADERO", "FALSO", 
                      "ES", "IGUAL", "DIFERENTE", "DE", "MAYOR", "MENOR", 
                      "O", "QUE", "POR", "ENTRE", "ADDOP", "MULOP", "COMMA", 
                      "COLON", "LPAREN", "RPAREN", "NUMBER_LIT", "STRING_LIT", 
                      "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDecl = 2
    RULE_constDecl = 3
    RULE_assignment = 4
    RULE_printStmt = 5
    RULE_readStmt = 6
    RULE_addStmt = 7
    RULE_subStmt = 8
    RULE_mulStmt = 9
    RULE_divStmt = 10
    RULE_incrementStmt = 11
    RULE_decrementStmt = 12
    RULE_ifStmt = 13
    RULE_elseStmt = 14
    RULE_repeatStmt = 15
    RULE_typeSpec = 16
    RULE_comparison = 17
    RULE_expression = 18
    RULE_additiveExpr = 19
    RULE_multiplicativeExpr = 20
    RULE_factor = 21

    ruleNames =  [ "program", "statement", "varDecl", "constDecl", "assignment", 
                   "printStmt", "readStmt", "addStmt", "subStmt", "mulStmt", 
                   "divStmt", "incrementStmt", "decrementStmt", "ifStmt", 
                   "elseStmt", "repeatStmt", "typeSpec", "comparison", "expression", 
                   "additiveExpr", "multiplicativeExpr", "factor" ]

    EOF = Token.EOF
    JARVIS=1
    CREA=2
    FIJA=3
    CON=4
    CAMBIA=5
    A=6
    DIME=7
    ESCUCHA=8
    SUMA=9
    RESTA=10
    MULTIPLICA=11
    DIVIDE=12
    AUMENTA=13
    DISMINUYE=14
    SI=15
    SI_CAP=16
    NO=17
    REPITE=18
    VECES=19
    TERMINA=20
    NUMERO_TYPE=21
    TEXTO_TYPE=22
    LOGICO_TYPE=23
    VERDADERO=24
    FALSO=25
    ES=26
    IGUAL=27
    DIFERENTE=28
    DE=29
    MAYOR=30
    MENOR=31
    O=32
    QUE=33
    POR=34
    ENTRE=35
    ADDOP=36
    MULOP=37
    COMMA=38
    COLON=39
    LPAREN=40
    RPAREN=41
    NUMBER_LIT=42
    STRING_LIT=43
    ID=44
    LINE_COMMENT=45
    BLOCK_COMMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JarvisLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JarvisLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(JarvisLangParser.StatementContext,i)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JarvisLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 32642) != 0):
                self.state = 44
                self.statement()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(JarvisLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(JarvisLangParser.VarDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(JarvisLangParser.ConstDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(JarvisLangParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.PrintStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.ReadStmtContext,0)


        def addStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.AddStmtContext,0)


        def subStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.SubStmtContext,0)


        def mulStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.MulStmtContext,0)


        def divStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.DivStmtContext,0)


        def incrementStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.IncrementStmtContext,0)


        def decrementStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.DecrementStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.IfStmtContext,0)


        def repeatStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.RepeatStmtContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = JarvisLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.constDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.printStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.readStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.addStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.subStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.mulStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 60
                self.divStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 61
                self.incrementStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 62
                self.decrementStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 63
                self.ifStmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 64
                self.repeatStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JARVIS(self):
            return self.getToken(JarvisLangParser.JARVIS, 0)

        def COMMA(self):
            return self.getToken(JarvisLangParser.COMMA, 0)

        def CREA(self):
            return self.getToken(JarvisLangParser.CREA, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(JarvisLangParser.TypeSpecContext,0)


        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def CON(self):
            return self.getToken(JarvisLangParser.CON, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = JarvisLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(JarvisLangParser.JARVIS)
            self.state = 68
            self.match(JarvisLangParser.COMMA)
            self.state = 69
            self.match(JarvisLangParser.CREA)
            self.state = 70
            self.typeSpec()
            self.state = 71
            self.match(JarvisLangParser.ID)
            self.state = 72
            self.match(JarvisLangParser.CON)
            self.state = 73
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JARVIS(self):
            return self.getToken(JarvisLangParser.JARVIS, 0)

        def COMMA(self):
            return self.getToken(JarvisLangParser.COMMA, 0)

        def FIJA(self):
            return self.getToken(JarvisLangParser.FIJA, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def CON(self):
            return self.getToken(JarvisLangParser.CON, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = JarvisLangParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(JarvisLangParser.JARVIS)
            self.state = 76
            self.match(JarvisLangParser.COMMA)
            self.state = 77
            self.match(JarvisLangParser.FIJA)
            self.state = 78
            self.match(JarvisLangParser.ID)
            self.state = 79
            self.match(JarvisLangParser.CON)
            self.state = 80
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JARVIS(self):
            return self.getToken(JarvisLangParser.JARVIS, 0)

        def COMMA(self):
            return self.getToken(JarvisLangParser.COMMA, 0)

        def CAMBIA(self):
            return self.getToken(JarvisLangParser.CAMBIA, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def A(self):
            return self.getToken(JarvisLangParser.A, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = JarvisLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(JarvisLangParser.JARVIS)
            self.state = 83
            self.match(JarvisLangParser.COMMA)
            self.state = 84
            self.match(JarvisLangParser.CAMBIA)
            self.state = 85
            self.match(JarvisLangParser.ID)
            self.state = 86
            self.match(JarvisLangParser.A)
            self.state = 87
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIME(self):
            return self.getToken(JarvisLangParser.DIME, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = JarvisLangParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(JarvisLangParser.DIME)
            self.state = 90
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCUCHA(self):
            return self.getToken(JarvisLangParser.ESCUCHA, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def getRuleIndex(self):
            return JarvisLangParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = JarvisLangParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(JarvisLangParser.ESCUCHA)
            self.state = 93
            self.match(JarvisLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUMA(self):
            return self.getToken(JarvisLangParser.SUMA, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def A(self):
            return self.getToken(JarvisLangParser.A, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def getRuleIndex(self):
            return JarvisLangParser.RULE_addStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddStmt" ):
                listener.enterAddStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddStmt" ):
                listener.exitAddStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddStmt" ):
                return visitor.visitAddStmt(self)
            else:
                return visitor.visitChildren(self)




    def addStmt(self):

        localctx = JarvisLangParser.AddStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_addStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(JarvisLangParser.SUMA)
            self.state = 96
            self.expression()
            self.state = 97
            self.match(JarvisLangParser.A)
            self.state = 98
            self.match(JarvisLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESTA(self):
            return self.getToken(JarvisLangParser.RESTA, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def A(self):
            return self.getToken(JarvisLangParser.A, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def getRuleIndex(self):
            return JarvisLangParser.RULE_subStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubStmt" ):
                listener.enterSubStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubStmt" ):
                listener.exitSubStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubStmt" ):
                return visitor.visitSubStmt(self)
            else:
                return visitor.visitChildren(self)




    def subStmt(self):

        localctx = JarvisLangParser.SubStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(JarvisLangParser.RESTA)
            self.state = 101
            self.expression()
            self.state = 102
            self.match(JarvisLangParser.A)
            self.state = 103
            self.match(JarvisLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULTIPLICA(self):
            return self.getToken(JarvisLangParser.MULTIPLICA, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def POR(self):
            return self.getToken(JarvisLangParser.POR, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_mulStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulStmt" ):
                listener.enterMulStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulStmt" ):
                listener.exitMulStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulStmt" ):
                return visitor.visitMulStmt(self)
            else:
                return visitor.visitChildren(self)




    def mulStmt(self):

        localctx = JarvisLangParser.MulStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mulStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(JarvisLangParser.MULTIPLICA)
            self.state = 106
            self.match(JarvisLangParser.ID)
            self.state = 107
            self.match(JarvisLangParser.POR)
            self.state = 108
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DivStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIVIDE(self):
            return self.getToken(JarvisLangParser.DIVIDE, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def ENTRE(self):
            return self.getToken(JarvisLangParser.ENTRE, 0)

        def expression(self):
            return self.getTypedRuleContext(JarvisLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_divStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivStmt" ):
                listener.enterDivStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivStmt" ):
                listener.exitDivStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivStmt" ):
                return visitor.visitDivStmt(self)
            else:
                return visitor.visitChildren(self)




    def divStmt(self):

        localctx = JarvisLangParser.DivStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_divStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(JarvisLangParser.DIVIDE)
            self.state = 111
            self.match(JarvisLangParser.ID)
            self.state = 112
            self.match(JarvisLangParser.ENTRE)
            self.state = 113
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUMENTA(self):
            return self.getToken(JarvisLangParser.AUMENTA, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def getRuleIndex(self):
            return JarvisLangParser.RULE_incrementStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrementStmt" ):
                listener.enterIncrementStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrementStmt" ):
                listener.exitIncrementStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrementStmt" ):
                return visitor.visitIncrementStmt(self)
            else:
                return visitor.visitChildren(self)




    def incrementStmt(self):

        localctx = JarvisLangParser.IncrementStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_incrementStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(JarvisLangParser.AUMENTA)
            self.state = 116
            self.match(JarvisLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecrementStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISMINUYE(self):
            return self.getToken(JarvisLangParser.DISMINUYE, 0)

        def ID(self):
            return self.getToken(JarvisLangParser.ID, 0)

        def getRuleIndex(self):
            return JarvisLangParser.RULE_decrementStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecrementStmt" ):
                listener.enterDecrementStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecrementStmt" ):
                listener.exitDecrementStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecrementStmt" ):
                return visitor.visitDecrementStmt(self)
            else:
                return visitor.visitChildren(self)




    def decrementStmt(self):

        localctx = JarvisLangParser.DecrementStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_decrementStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(JarvisLangParser.DISMINUYE)
            self.state = 119
            self.match(JarvisLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JARVIS(self):
            return self.getToken(JarvisLangParser.JARVIS, 0)

        def COMMA(self):
            return self.getToken(JarvisLangParser.COMMA, 0)

        def SI(self):
            return self.getToken(JarvisLangParser.SI, 0)

        def comparison(self):
            return self.getTypedRuleContext(JarvisLangParser.ComparisonContext,0)


        def COLON(self):
            return self.getToken(JarvisLangParser.COLON, 0)

        def TERMINA(self):
            return self.getToken(JarvisLangParser.TERMINA, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JarvisLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(JarvisLangParser.StatementContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(JarvisLangParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return JarvisLangParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)
